test/files/neg/t1878.check
t1878.scala:3: error: bad simple pattern: bad use of _* (a sequence pattern must be the last pattern)
  val err1 = "" match { case Seq(f @ _*, ',') => f }
                                       ^
t1878.scala:9: error: bad simple pattern: bad use of _* (a sequence pattern must be the last pattern)
  val List(List(_*, arg2), _) = List(List(1,2,3), List(4,5,6))
                  ^
two errors found
